fix: fix bug in popup-log-in on mobile view

--- a/src/scss/components/_popup-log-in.scss
+++ b/src/scss/components/_popup-log-in.scss
@@ -37,6 +37,7 @@
 }
 
 .popup-log-in__label {
+  max-width: 286px;
   padding: 8px 50px;
 
   background-color: $popup-bg-label-color;
